plugins {
    alias(libs.plugins.android.application)
}

def getIpAddress() {
    Properties properties = new Properties()
    properties.load(project.rootProject.file('local.properties').newDataInputStream())
    return properties.getProperty("ip_addr");
}

android {
    namespace 'com.example.fusmobilni'
    compileSdk 34

    defaultConfig {
        applicationId "com.example.fusmobilni"
        minSdk 30
        targetSdk 34
        versionCode 1
        versionName "1.0"
        buildConfigField "String", "IP_ADDR", "\""+getIpAddress()+"\""
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
    }

    buildTypes {
//        debug {
//            buildConfigField "String", "IP_ADDR", "\"192.168.1.4\"" // Replace with your dev server IP
//        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildFeatures{
        viewBinding true
        buildConfig true
    }

    task wrapper(type: Wrapper){
        gradleVersion = '7.2'
    }

    task prepareKotlinBuildScriptModel {

    }
}


dependencies {
    implementation libs.glide
    implementation libs.constraintlayout
    implementation libs.car.ui.lib
    annotationProcessor libs.compiler
    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    implementation libs.navigation.ui
    implementation libs.navigation.fragment
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
    implementation libs.ucrop
    implementation libs.imagepicker
    implementation libs.datastore.preferences
    implementation libs.gson
    implementation libs.view
    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
    implementation 'com.facebook.shimmer:shimmer:0.5.0'

}